Adds Airspace map

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -37,11 +37,11 @@
     "footer.newsletter.message": "Subscribe our newsletter to get the latest news and updates!",
     "footer.newsletter.placeholder": "Enter your emails",
     "home.hero.request_training": "Request Training!",
-    "staff.hero.title": "Staff",
+    "staff.hero.title": "Our Staff",
     "staff.hero.slogan": "Meet the team",
     "staff.staff.title": "Meet the Staff",
     "staff.instructors.title": "Meet the Instructors",
-    "roster.hero.title": "Roster",
+    "roster.hero.title": "Controller Roster",
     "roster.hero.slogan": "Meet the controllers",
     "roster.home.title": "Home Controllers",
     "roster.visiting.title": "Visiting Controllers",
@@ -53,5 +53,16 @@
     "roster.roster.terminal": "Terminal",
     "roster.roster.enroute": "Enroute",
     "roster.roster.pms": "PMS",
-    "roster.roster.supercenter": "Supercenter"
+    "roster.roster.supercenter": "Supercenter",
+    "airspace.hero.title": "Our Airspace",
+    "airspace.hero.slogan": "Where will you fly",
+    "airspace.counters.title": "México Airspace in Numbers",
+    "airspace.counters.firs.count": 2,
+    "airspace.counters.firs.name": "Flight Info Regions",
+    "airspace.counters.accs.count": 4,
+    "airspace.counters.accs.name": "Area Control Sectors",
+    "airspace.counters.sectors.count": 60,
+    "airspace.counters.sectors.name": "Sectors",
+    "airspace.counters.tmas.count": 80,
+    "airspace.counters.tmas.name": "Terminal Areas"
 }
